# XymosTeX

./: .travis.yml  Cargo.toml  LICENSE  README.md  clippy.toml  goals.md
.github/workflows/: rust-actions.yml
examples/: basicmath.tex  boxes.tex  dvitest.dvi  dvitest.tex  math.dvi  math.tex  paragraphs.dvi  paragraphs.tex  primes.tex  vertical.tex
src/: box_to_dvi.rs  boxes.rs  category.rs  dimension.rs  font.rs  font_metrics.rs  glue.rs  interpret.rs  lexer.rs  lib.rs  line_breaking.rs  list.rs  main.rs  makro.rs  math_code.rs  math_list.rs  paths.rs  print_dvi.rs  state.rs  testing.rs  tests.rs  token.rs  variable.rs
src/dvi/: file.rs  file_reader.rs  file_writer.rs  interpreter.rs  mod.rs  parser.rs
src/dvi/test_files/: test.dvi
src/parser/: assignment.rs  boxes.rs  conditional.rs  dimen.rs  expand.rs  glue.rs  horizontal_list.rs  makro.rs  math_list.rs  mod.rs  number.rs  primitives.rs  printing.rs  variable.rs  vertical_list.rs
src/tfm/: accessors.rs  file_reader.rs  fixnum.rs  mod.rs  read_tfm.rs  test_data.rs
