[package]
name = "xymostex"
version = "0.1.0"
authors = ["Emily Eisenberg <xymostech@gmail.com>"]
edition = "2018"
default-run = "xymostex"

[[bin]]
name = "xymostex"
path = "src/main.rs"

[[bin]]
name = "print_dvi"
path = "src/print_dvi.rs"

[[bin]]
name = "interpret"
path = "src/interpret.rs"

[dependencies]
kpathsea = "0.2.3"
once_cell = "1.16.0"
