[package]
name = "xymostex"
version = "0.1.0"
authors = ["Emily Eisenberg <xymostech@gmail.com>"]
edition = "2018"
default-run = "xymostex"

[lib]
doctest = false

[[bin]]
name = "xymostex"
test = false

[[bin]]
name = "print_dvi"
test = false

[[bin]]
name = "interpret"
test = false

[dependencies]
kpathsea = "0.2.3"
once_cell = "1.16.0"
